--- a/Week2/Hello.html
+++ b/Week2/Hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head lang="en">
-        <title>Page title</title>
+        <title>Page titles</title>
     </head>
     <body>
         <h1>Welcome to Agile Web!</h1>
