--- a/Week2/Hello.html
+++ b/Week2/Hello.html
@@ -4,7 +4,57 @@
         <title>Page titles</title>
     </head>
     <body>
-        <h1>Welcome to Agile Web!</h1>
-        <p>Ready to build a website?</p>
+        <h1 id="heading">Welcome to Agile Web!</h1>
+        <p>Ready to build <br> a website?</p>
+        <p>
+            This <span style="color: red;">lec</span> is about: <em>Front end web dev</em>
+            <br>
+            Including: <b>HTML</b>, <b>CSS</b>, <strong>JavaScript</strong>
+            <br>
+            <code>print("Hello World")</code>
+            <br>
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
+            <br>
+            <a href="https://www.google.com">Google</a>
+            <br>
+        </p>
+        <p>
+            Below is a list
+            <ol type="I">
+                <li>Alpha</li>
+                <li>Beta</li>
+                <li>Cat</li>
+            </ol>
+        </p>
+        <p>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" placeholder="Enter your name">
+                <br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email">
+                <br>
+                <input type="submit" value="Submit">
+            </form>
+        </p>
+        <p>
+            <table>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Age</th>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>30</td>
+                </tr>
+                <tr>
+                    <td>Jane</td>
+                    <td>Doe</td>
+                    <td>25</td>
+                </tr>
+            </table>
+        </p>
     </body>
 </html>
