--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -18,8 +18,8 @@
               </a>
         
               <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Resume</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Best practices</a></li>
+                <li class="nav-item" id="resume-button"><a href="#" class="nav-link active">Resume</a></li>
+                <li class="nav-item" id="practice-button"><a href="#" class="nav-link">Best practices</a></li>
               </ul>
             </header>
           </div>
