Hero not center bug fixed

--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -18,14 +18,14 @@
             <input type="checkbox" id="checkbox" />
             <div class="slider round"></div>
         </label>
-        <em>Toggle Dark Mode</em>
+        <em>DARK MODE</em>
     </div>
 
     <!-- Hero section - Full screen with name and short intro -->
     <section id="hero" class="hero-section">
         <div class="hero-content">
-            <h1 class="animated-text">John Doe</h1>
-            <p class="animated-text-delay">Web Developer & UI/UX Designer</p>
+            <h1 class="animated-text">Vincent Wang</h1>
+            <p class="animated-text-delay">Full-Stack Web Developer</p>
             <div class="scroll-indicator">
                 <p>Scroll Down</p>
                 <i class="fas fa-chevron-down"></i>
