Picture added and animation redering conflicts fixed

--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -40,8 +40,8 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="profile-picture-container">
-                    <!-- Profile picture appears as you scroll -->
-                    <img src="https://via.placeholder.com/300" alt="John Doe" class="profile-picture" id="profile-picture">
+                    <!-- Profile picture -->
+                    <img src="./mouse.heic" alt="Vincent Wang" class="profile-picture" id="profile-picture">
                 </div>
                 <div class="about-text">
                     <p>Hello! I'm John Doe, a passionate web developer with expertise in creating responsive, user-friendly websites and applications. I specialize in front-end development and have a keen eye for design and user experience.</p>
