Best practice and score section not rendering bug fixed

--- a/IndividualProject/bestprac.html
+++ b/IndividualProject/bestprac.html
@@ -536,6 +536,6 @@ import { login, logout } from './userAuth.js';
     </button>
 
     <!-- JavaScript -->
-    <script src="bestprac.js"></script>
+    <script src="./bestprac.js"></script>
 </body>
 </html>
