Shared CSS style

--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -249,7 +249,7 @@
             
             <!-- Button to redirect to another page -->
             <div class="redirect-button-container">
-                <a href="coding-practices.html" class="redirect-button">
+                <a href="./bestprac.html" class="redirect-button">
                     <span>View Coding Practices Guide</span>
                     <i class="fas fa-arrow-right"></i>
                 </a>
