--- a/IndividualProject/bestprac.html
+++ b/IndividualProject/bestprac.html
@@ -7,7 +7,7 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./bestprac.css">
+    <link rel="stylesheet" href="./resume.css">
 </head>
 <body>
     <!-- Dark mode toggle -->
