Backtotop button added and some issues fixed

--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -281,10 +281,10 @@
         </div>
     </footer>
 
-    <!-- Back to Top Button -->
-    <button class="back-to-top" title="Go to top">
-      <i class="fas fa-arrow-up"></i>
-    </button>
+    <!-- Back to top button -->
+    <div class="back-to-top" id="backToTop">
+        <i class="fas fa-arrow-up"></i>
+    </div>
 
     <!-- JavaScript -->
     <script src="resume.js"></script>
