--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -7,13 +7,13 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Floating Navigation Bar -->
     <div class="floating-nav">
         <div class="floating-nav-button active" data-page="resume" title="CV Page">
-            <i class="fas fa-user-tie"></i>
+            <i class="fas fa-user"></i>
         </div>
         <div class="floating-nav-button" data-page="bestprac" title="Best Practices">
             <i class="fas fa-code"></i>
