Script mergeing and moving

--- a/IndividualProject/bestprac.html
+++ b/IndividualProject/bestprac.html
@@ -540,6 +540,6 @@ import { login, logout } from './userAuth.js';
     </div>
 
     <!-- JavaScript -->
-    <script src="./bestprac.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
