--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -287,6 +287,6 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="resume.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
