Fetching image bug fixed and works fine for now

--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -278,6 +278,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Vincent Wang. All rights reserved.</p>
+            <p>This page was created as part of CITS5505 Agile Web Development.</p>
         </div>
     </footer>
 
