Resume changes from me to a rat

--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -27,7 +27,7 @@
     <section id="hero" class="hero-section">
         <div class="hero-content">
             <h1 class="animated-text">Vincent Wang</h1>
-            <p class="animated-text-delay">Full-Stack Web Developer</p>
+            <p class="animated-text-delay">Professional Mouse Extraordinaire</p>
             <div class="scroll-indicator">
                 <p>Scroll Down</p>
                 <i class="fas fa-chevron-down"></i>
@@ -43,12 +43,12 @@
             <div class="about-content">
                 <div class="profile-picture-container">
                     <!-- Profile picture -->
-                    <img src="./mouse.heic" alt="Vincent Wang" class="profile-picture" id="profile-picture">
+                    <img src="./mouse.heic" alt="Chips the Mouse" class="profile-picture" id="profile-picture">
                 </div>
                 <div class="about-text">
-                    <p>Hello! I'm Vincent Wang, a passionate web developer with expertise in creating responsive, user-friendly websites and applications. I specialize in front-end development and have a keen eye for design and user experience.</p>
-                    <p>With 5+ years of experience in the industry, I've worked on various projects ranging from small business websites to large-scale web applications. I'm constantly learning and adapting to new technologies to stay at the forefront of web development.</p>
-                    <p>When I'm not coding, you can find me hiking, reading tech blogs, or experimenting with new design trends. I believe in creating web experiences that are not only visually appealing but also accessible and intuitive for all users.</p>
+                    <p>Squeaks and greetings! I'm Chips, the intellectual mouse companion of Vincent Wang. Don't let my tiny paws fool you – I've mastered the art of keyboard navigation and can code faster than you can say "cheese!"</p>
+                    <p>With whiskers that can sense code bugs from miles away, I've been Vincent's secret debugging assistant for over 3 years (that's like 21 in mouse years!). I specialize in finding the tiniest errors that human eyes miss, and I'm particularly skilled at navigating through maze-like codebases.</p>
+                    <p>When I'm not helping Vincent with his projects, you can find me creating intricate nests from discarded sticky notes, conducting scientific experiments on which cheese pairs best with different coding languages, or running on my ergonomic exercise wheel to maintain peak performance. My mission is to prove that even the smallest creatures can make a big impact in the tech world!</p>
                 </div>
             </div>
         </section>
@@ -175,32 +175,32 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-date">
-                        <span>2021 - Present</span>
+                        <span>2022 - Present</span>
                     </div>
                     <div class="timeline-content">
-                        <h3>Senior Front-end Developer</h3>
-                        <h4>Tech Solutions Inc.</h4>
-                        <p>Lead front-end development for enterprise clients. Implemented responsive designs and improved website performance by 40%. Mentored junior developers and introduced best practices in code reviews.</p>
+                        <h3>Chief Nibbling Officer</h3>
+                        <h4>Vincent's Home Office</h4>
+                        <p>Lead cable management specialist, ensuring all wires are properly chewed to optimal lengths. Pioneered the "Midnight Keyboard Cleaning" technique, removing crumbs with 99.9% efficiency. Reduced snack waste by 40% through my innovative "Leave No Crumb Behind" initiative.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">
-                        <span>2018 - 2021</span>
+                        <span>2021 - 2022</span>
                     </div>
                     <div class="timeline-content">
-                        <h3>Web Developer</h3>
-                        <h4>Digital Creations Agency</h4>
-                        <p>Developed and maintained websites for various clients. Collaborated with designers to implement pixel-perfect UIs. Worked with WordPress, HTML, CSS, and JavaScript to create responsive websites.</p>
+                        <h3>Mousepad Quality Assurance Specialist</h3>
+                        <h4>Under-Desk Enterprises</h4>
+                        <p>Conducted rigorous testing of various mousepad surfaces for optimal napping conditions. Created comprehensive reports on fabric durability against prolonged scratching. Collaborated with the Dust Collection Department to ensure consistent workspace aesthetic.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">
-                        <span>2016 - 2018</span>
+                        <span>2020 - 2021</span>
                     </div>
                     <div class="timeline-content">
-                        <h3>Junior Web Developer</h3>
-                        <h4>StartUp Innovations</h4>
-                        <p>Assisted in the development of web applications. Gained experience in front-end technologies and responsive design principles. Participated in code reviews and team meetings.</p>
+                        <h3>Junior Seed Procurement Agent</h3>
+                        <h4>Backyard Foraging Inc.</h4>
+                        <p>Started my career in the challenging field of food acquisition. Mastered stealth techniques essential for operational success. Set a division record by collecting 27 sunflower seeds in a single night mission. Received the "Squeaky Clean" award for leaving no evidence behind.</p>
                     </div>
                 </div>
             </div>
@@ -211,16 +211,16 @@
             <h2 class="section-title">Education</h2>
             <div class="education-container">
                 <div class="education-item">
-                    <h3>Bachelor of Science in Computer Science</h3>
-                    <h4>University of Technology</h4>
-                    <p class="education-date">2012 - 2016</p>
-                    <p>Graduated with honors. Specialized in web development and software engineering. Participated in various hackathons and coding competitions.</p>
+                    <h3>Master's Degree in Crumb Collection</h3>
+                    <h4>University of Kitchen Counter</h4>
+                    <p class="education-date">2019 - 2020</p>
+                    <p>Graduated top of my nest. Specialized in nocturnal operations and silent movement techniques. Dissertation: "The Art of Avoiding Mousetraps: A Whisker-Based Approach to Survival."</p>
                 </div>
                 <div class="education-item">
-                    <h3>Full-Stack Web Development Bootcamp</h3>
-                    <h4>Code Academy</h4>
-                    <p class="education-date">2016</p>
-                    <p>Intensive 12-week program focusing on modern web technologies and best practices in web development.</p>
+                    <h3>Bachelor of Science in Nest Engineering</h3>
+                    <h4>Rodent Technical Institute</h4>
+                    <p class="education-date">2018 - 2019</p>
+                    <p>Intensive program focusing on sustainable nesting materials and structural integrity under variable weather conditions. Minor in Human Psychology: Understanding Their Screaming When They See You.</p>
                 </div>
             </div>
         </section>
@@ -231,23 +231,23 @@
             <div class="contact-container">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <p>Email: <a href="mailto:placeholder@example.com">placeholder@example.com</a></p>
+                    <p>Email: <a href="mailto:chips@mousemail.squeak">chips@mousemail.squeak</a></p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-phone"></i>
-                    <p>Phone: (XXX) XXX-XXXX</p>
+                    <p>Communication: Three squeaks for yes, two for no</p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Location: City, Country</p>
+                    <p>Location: Third Hole Behind the Bookshelf, Vincent's Room</p>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-linkedin"></i>
-                    <p>LinkedIn: <a href="https://linkedin.com/" target="_blank">linkedin.com/in/johndoe</a></p>
+                    <p>MousedIn: <a href="https://mousedin.com/" target="_blank">mousedin.com/in/chips</a></p>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-github"></i>
-                    <p>GitHub: <a href="https://github.com/" target="_blank">github.com/johndoe</a></p>
+                    <p>MouseHub: <a href="https://mousehub.com/" target="_blank">mousehub.com/chips</a></p>
                 </div>
             </div>
             
@@ -259,17 +259,17 @@
             <h2 class="section-title">References</h2>
             <div class="references-container">
                 <div class="reference-item">
-                    <h3>Sources Used</h3>
+                    <h3>Testimonials</h3>
                     <ul>
-                        <li>MDN Web Docs - <a href="https://developer.mozilla.org/" target="_blank">developer.mozilla.org</a></li>
-                        <li>CSS-Tricks - <a href="https://css-tricks.com/" target="_blank">css-tricks.com</a></li>
-                        <li>Font Awesome - <a href="https://fontawesome.com/" target="_blank">fontawesome.com</a></li>
-                        <li>Google Fonts - <a href="https://fonts.google.com/" target="_blank">fonts.google.com</a></li>
+                        <li>"Chips has been instrumental in our cheese inventory reduction strategy." - Kitchen Pantry Manager</li>
+                        <li>"Never seen anyone run faster when the lights turn on." - Midnight Security Guard</li>
+                        <li>"His ability to fit through impossibly small spaces is unmatched in the industry." - Structural Engineer</li>
+                        <li>"The most detail-oriented cable management specialist I've ever worked with... wait, those aren't supposed to be chewed!" - IT Department</li>
                     </ul>
                 </div>
                 <div class="reference-item">
-                    <h3>AI Assistance</h3>
-                    <p>This CV webpage was created with assistance from ChatGPT by OpenAI, which helped with code structure, design suggestions, and implementation of interactive elements.</p>
+                    <h3>Special Thanks</h3>
+                    <p>This CV webpage was created with assistance from Vincent Wang, who generously allows me to use his computer during his sleeping hours. Additional thanks to the crumb drawer in his keyboard for sustenance during late-night coding sessions.</p>
                 </div>
             </div>
         </section>
@@ -277,8 +277,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Vincent Wang. All rights reserved.</p>
-            <p>This page was created as part of CITS5505 Agile Web Development.</p>
+            <p>&copy; 2025 Chips the Mouse. All cheese rights reserved.</p>
+            <p>This page was created as part of "Operation Human Infiltration" - Phase 1.</p>
         </div>
     </footer>
 
