Simplify JS of dark mode part

--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -271,14 +271,17 @@
                     <h3>Special Thanks</h3>
                     <p>This CV webpage was created with assistance from Vincent Wang, who generously allows me to use his computer during his sleeping hours. Additional thanks to the crumb drawer in his keyboard for sustenance during late-night coding sessions.</p>
                 </div>
+                <div class="reference-item">
+                    <h3>Story</h3>
+                    <p>This CV is a work of fiction and should not be taken seriously. Any resemblance to actual mice, living or dead, is purely coincidental. No cheese was harmed in the making of this document.</p>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Chips the Mouse. All cheese rights reserved.</p>
-            <p>This page was created as part of "Operation Human Infiltration" - Phase 1.</p>
+            <p>&copy; 2025 Vincent Wang. All rights reserved.</p>
+            <p>This page was created as part of CITS5505 Agile Web Development.</p>
         </div>
     </footer>
 
