Combine styles of reference and education

--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -259,17 +259,10 @@
             <h2 class="section-title">References</h2>
             <div class="references-container">
                 <div class="reference-item">
-                    <h3>Testimonials</h3>
+                    <h3>References</h3>
                     <ul>
-                        <li>"Chips has been instrumental in our cheese inventory reduction strategy." - Kitchen Pantry Manager</li>
-                        <li>"Never seen anyone run faster when the lights turn on." - Midnight Security Guard</li>
-                        <li>"His ability to fit through impossibly small spaces is unmatched in the industry." - Structural Engineer</li>
-                        <li>"The most detail-oriented cable management specialist I've ever worked with... wait, those aren't supposed to be chewed!" - IT Department</li>
+                        <li>Test</li>
                     </ul>
-                </div>
-                <div class="reference-item">
-                    <h3>Special Thanks</h3>
-                    <p>This CV webpage was created with assistance from Vincent Wang, who generously allows me to use his computer during his sleeping hours. Additional thanks to the crumb drawer in his keyboard for sustenance during late-night coding sessions.</p>
                 </div>
                 <div class="reference-item">
                     <h3>Story</h3>
