Migration of CSS

--- a/IndividualProject/bestprac.html
+++ b/IndividualProject/bestprac.html
@@ -7,7 +7,8 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style/commonStyle.css">
+    <link rel="stylesheet" href="./style/bestprac.css">
 </head>
 <body>
     <!-- Floating Navigation Bar -->
@@ -533,6 +534,6 @@ import { login, logout } from './userAuth.js';
     </div>
 
     <!-- JavaScript -->
-    <script src="./script.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 </html>
