--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -7,7 +7,8 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Style -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/commonStyle.css">
+    <link rel="stylesheet" href="./style/resume.css">
 </head>
 <body>
     <!-- Floating Navigation Bar -->
@@ -43,7 +44,7 @@
             <div class="about-content">
                 <div class="profile-picture-container">
                     <!-- Profile picture -->
-                    <img src="./mouse.heic" alt="Chips the Mouse" class="profile-picture" id="profile-picture">
+                    <img src="./imag/mouse.heic" alt="Chips the Mouse" class="profile-picture" id="profile-picture">
                 </div>
                 <div class="about-text">
                     <p>Squeaks and greetings! I'm Chips, the intellectual mouse companion of Vincent Wang. Don't let my tiny paws fool you – I've mastered the art of keyboard navigation and can code faster than you can say "cheese!"</p>
@@ -290,6 +291,6 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 </html>
