Migration of JS

--- a/IndividualProject/bestprac.html
+++ b/IndividualProject/bestprac.html
@@ -534,6 +534,8 @@ import { login, logout } from './userAuth.js';
     </div>
 
     <!-- JavaScript -->
-    <script src="./script/script.js"></script>
+    <script src="./script/sidebar.js"></script>
+    <script src="./script/typing.js"></script>
+    <script src="./script/bestprac.js"></script>
 </body>
 </html>
