--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -291,6 +291,8 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="./script/script.js"></script>
+    <script src="./script/sidebar.js"></script>
+    <script src="./script/typing.js"></script>
+    <script src="./script/resume.js"></script>
 </body>
 </html>
