--- a/IndividualProject/resume.html
+++ b/IndividualProject/resume.html
@@ -28,7 +28,7 @@
     <section id="hero" class="hero-section">
         <div class="hero-content">
             <h1 class="animated-text">Vincent Wang</h1>
-            <p class="animated-text-delay">Professional Mouse Extraordinaire</p>
+            <p class="animated-text-delay">Full-stack Web Developer</p>
             <div class="scroll-indicator">
                 <p>Scroll Down</p>
                 <i class="fas fa-chevron-down"></i>
@@ -275,6 +275,7 @@
                     <p>Starting with a basic HTML structure and CSS with help of AI, I attempted to implement interactive effects using JavaScript. During this phase, I also used AI to debug code, but discovered its limitations - even when I described the errors, the AI couldn't always fix them. Two solutions worked best: either using the browser's developer console to identify exactly where the error occurred (then feeding that information to the AI), or deleting problematic JavaScript code entirely and asking the AI to rewrite it. Some persistent issues arose because some AI-generated CSS occasionally conflicted with other elements - these were simple to fix once found, but hard to detect, especially since AI tools often miss CSS-related issues.</p>
                     <p>After completing the main development, I researched industry best practices to improve the code quality and added proper source citations. For the resume section, being a second-year student with no work experience, I creatively substituted my own information with pictures of my pet rat and created a fictional rat-themed resume, which turned out to be both functional and humorous.</p>
                 </div>
+            </div>
         </section>
     </main>
 
